fix letter spacing

--- a/css/main.css
+++ b/css/main.css
@@ -3731,7 +3731,7 @@ display:none;
 @media only screen and (min-width: 900px) and (max-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
 
 	.tracks .text h2{
-			letter-spacing:1px;
+			letter-spacing:5px;
 			padding-top:80px;
 			padding-bottom:80px;
 			/*color:transparent;*/
@@ -4075,7 +4075,7 @@ margin-right: 150px;
 
 @media (min-width: 1440px) {
 .tracks .text h2 {
-	font-size:2.8em;
+	font-size:3em;
 	padding-left:357px;
 	padding-top: 80px;
 	padding-bottom: 80px;
